--- a/steins_gate_0/docs/0002.md
+++ b/steins_gate_0/docs/0002.md
@@ -1,6 +1,6 @@
 > <big> **零化域的缺失之环 - 02** </big>  
 > 1.129848  
-> [ 2010/11/23 ] 研讨会前半程，红莉栖论文被质疑，冈伦爆发。
+> [ 2010/11/23 ] 研讨会前半程，红莉栖论文被质疑，冈伦爆发。  
 
 平复心情的时候接到了真由理的***RINE***。  
 这是最近才火起来的一种即时通讯软件，比邮件更加方便，所以用的人很多。  
@@ -118,7 +118,7 @@
 &emsp;&emsp; 程序会将患者的记忆作为数据自动备份，  
 &emsp;&emsp; 即使记忆丢失，只要与电脑连接，重新将数据覆盖回脑内即可。  
 &emsp;&emsp; 为此，我们设想，这是不是能够帮助人们延缓遗忘的进程。  
-&emsp;&emsp; 最终，就可以让海马体随时与PC里的记忆数据连接。  
+&emsp;&emsp; 最终，就可以让海马体随时与电脑里的记忆数据连接。  
 &emsp;&emsp; 那样，在丧失大脑机能的状态下，比如大脑受到强烈损伤而萎缩，  
 &emsp;&emsp; 即使变成那种状态，也能让人脑的机能继续维持运作。  
 &emsp;&emsp; 正如同外接存储器一样。”  
