--- a/steins_gate_0/docs/0003.md
+++ b/steins_gate_0/docs/0003.md
@@ -1,6 +1,6 @@
 > <big> **零化域的缺失之环 - 03** </big>  
 > 1.129848  
-> [ 2010/11/23 ] 研讨会后半程，介绍『Amadeus』系统。
+> [ 2010/11/23 ] 研讨会后半程，介绍『Amadeus』系统。  
 
 “『Amadeus』系统。”  
 比屋定真帆一边说着，一边退到了墙边。  
@@ -26,14 +26,14 @@
 &emsp;&emsp; 将人类的记忆数据化取出、保存，还将这数据活用，  
 &emsp;&emsp; 这种事真的办得到么？  
 &emsp;&emsp; 那么我，究竟是什么呢？  
-&emsp;&emsp; 我，拥有从78小时23分之前的比屋定真帆脑内提取的记忆，以此数据为基础来行动。”    
+&emsp;&emsp; 我，拥有从78小时23分前的比屋定真帆脑内提取的记忆，基于此数据而行动。”  
 什么？  
 教授又很快的说了些什么，并催促画面中的“比屋定真帆”翻译。  
 但是，她——话说不知道是不是应该称呼“**她**”——犹豫了一下，随后闭上了嘴。  
 另一边，在墙边站着的真正的比屋定真帆也是几乎同样的反应。  
 真帆：“教授！你刚才那——”  
 真帆（Amadeus）：“教授，刚才的发言，我能当作性骚扰向大学控诉吗？”  
-雷斯吉宁教授看到这副样子，愉快的反击回去。两人说着流利的英语，半数以上的听众都不能够理解对话的意思。  
+雷斯吉宁教授见状愉快地反击回去。两人说着流利的英语，半数以上听众都理解不了对话的意思。  
 一副没办法的样子，在墙边的比屋定真帆重新握起话筒：  
 “唉……教授呢，那个……对我——  
 &emsp;&emsp; 不，是对依靠我的记忆而运作的这个『Amadeus』，说——  
@@ -89,10 +89,10 @@
 然后教授突然干脆的继续讲述，比屋定真帆也像是什么都没有发生过一样继续翻译。  
 真帆（同传）：“就像这样不断进行验证，最终我们设想到——  
 &emsp;&emsp; 『Amadeus』会不会像人类一样，孕育出自己的灵魂呢？”  
-我吃了一惊。灵魂？这样连定义的都模糊不清的词语，由脑科学研究的最高权威说出来没问题吗……？  
+我吃了一惊。灵魂？这个连定义都模糊不清的词语，由脑科学研究的最高权威说出来没问题吗……？  
 真帆（同传）：“这才是，**真正意义上的人工智能**。”  
 
-会场内一下子静了下来。随即，许多人像是要开始和教授讨论一样自己讲了起来，研讨会一时间陷入大混乱。  
+会场内静止了一瞬。随即，许多人像是要和教授讨论似的讲了起来，研讨会陷入了混乱。  
 
 
 <br/>
