--- a/steins_gate_0/docs/0004.md
+++ b/steins_gate_0/docs/0004.md
@@ -116,12 +116,12 @@
 “勇敢的爱因斯坦三世啊！”  
 “欸？！”  
 听到似曾相识的男性声音，我回头看去。雷斯吉宁教授满脸笑容，正大步向我走来。然后就这样顺势抓住了我的手，十分强硬的和我握手。他的手像熊掌一样大。不，不仅仅是手，现在站在我面前的他比演讲的时候看起来还要更加高大。我的个子已经算高了，他比我还要高出大概一头的样子。  
-“那…那个，教授，我，我那个……”  
+“那、那个…教授，我，我那个……”  
 不好，面对突然的事情我开始慌了，连自我介绍都没办法好好的说出来。  
 话说，刚才教授是不是说日语了？  
 “但是，居然把我的助手给弄哭了，实在是看不下去啊。”  
 “啊，不是，这个是……”  
-“不，不是啦教授，是我自己没忍住，跟他没有任何关系！”  
+“不、不是啦教授，是我自己没忍住，跟他没有任何关系！”  
 我和比屋定真帆一起全力否定道。  
 但是，我不知道比屋定真帆为什么哭，所以也没办法找借口，因此变得更加慌张。  
 “嗯，那个…总而言之是……”  
@@ -142,14 +142,14 @@
 “可是……”  
 他们究竟在说些什么？我不明白。但这是好不容易到来的和雷斯吉宁教授产生联系的机会，我不想轻易放弃。  
 “请一定，让我来帮忙。”  
-*“Nice!”*  
+“*Nice!* ”  
 教授拍了拍我的肩膀，满意地笑着，像是小孩子一样，天真的笑脸。  
 “那么详细的内容就让 *Maho* 告诉你。请多关照。”  
 教授被其他研究者叫走了。而比屋定真帆像是表达不可思议一样，摇了摇头。  
 
 “跟『Amadeus』见面，还有测试员什么的，到底是在说什么东西啊？”  
 “在发表会上用到的那个示例版『Amadeus』，是用的我自己的记忆。  
-&emsp;&emsp; 而被用作『Amadeus』的数据的，还有一位研究人员的记忆  。”  
+&emsp;&emsp; 而被用作『Amadeus』的数据的，还有一位研究人员的记忆。”  
 另外一名……研究者的记忆？  
 这句话，意味着什么？  
 从刚才比屋定真帆和雷斯吉宁教授的对话当中，得出答案的瞬间，我的心脏开始剧烈跳动。  
