--- a/steins_gate_0/docs/0010.md
+++ b/steins_gate_0/docs/0010.md
@@ -1,6 +1,6 @@
 > <big> **闭时曲线的碑文 - 05** </big>  
 > 1.129848  
-> [ 间章 ] 真帆和红莉栖和“红莉栖”。
+> [ 真帆视角 ] 真帆和红莉栖和“红莉栖”。  
 
 比屋定真帆回想起了，和后辈牧濑红莉栖最后一次面对面交谈的夜晚。  
 
