--- a/steins_gate_0/docs/0011.md
+++ b/steins_gate_0/docs/0011.md
@@ -1,6 +1,6 @@
 > <big> **闭时曲线的碑文 - 06** </big>  
 > 1.129848  
-> [ 间章 2010/12/04 ] 真由理和她的cosplay伙伴三人；吹雪的噩梦。
+> [ 2010/12/04 吹雪视角 ] 真由理和她的cosplay伙伴三人；吹雪的噩梦。  
 
 到了12月，天空变暗的时间越来越早。在cosplay店中选择商品的时候，外面的景色已经踏入了夜晚。中濑克美感到惊讶。拉着的拉杆箱传来沉甸甸的感觉。今天买的东西全都塞了进去，箱子都很明显地涨了起来。尽管如此，能够和因为cosplay而互相认识的朋友们一起买东西，假期过得很充实。爽快的疲劳感。到车站的路上都踏着轻快的脚步。  
 “吹雪酱，快要跳着小步了吖~”  
