--- a/steins_gate_0/docs/0012.md
+++ b/steins_gate_0/docs/0012.md
@@ -1,6 +1,6 @@
 > <big> **闭时曲线的碑文 - 07** </big>  
 > 1.129848  
-> [ 间章 2010/12/05 ] 铃羽与父亲与未来母亲在LAB。
+> [ 2010/12/05 铃羽视角 ] 铃羽与父亲与未来母亲在LAB。  
 
 阿万音铃羽，现在正处于爆发的边缘。究其原因，是同处一室的青年——此人正是自己的家属。桥田至，外号桶子，正窝着那脑满肠肥的身子，满脸不正经地盯着显示器。时针即将指向11点之际他才爬出被窝，一口气连汤带水地干掉了三桶泡面之后，悠哉游哉地上起网来。  
 “唔……哦？噢噢噢！神马玩意？  
