--- a/steins_gate_0/docs/0013.md
+++ b/steins_gate_0/docs/0013.md
@@ -1,6 +1,6 @@
 > <big> **闭时曲线的碑文 - 08** </big>  
 > 1.129848  
-> [ 间章 2036/08/13 19:46 ] 回忆中的未来，跳跃向着过去。篝的初登场。
+> [ 2036/08/13 19:46 铃羽视角 ] 回忆中的未来，跳跃向着过去。篝的初登场。  
 
 铃羽：“爸爸，治安部队已经到万世桥了！”  
 桶子：“那就是说，这里被发现也只是时间问题了。之前放出去的假情报也没有效果吗……”  
@@ -22,7 +22,7 @@
 铃羽让椎名母女俩退后，将自己的右手与右眼靠近时间机器的传感器。通过生体认证后，舱门滑开了。然后就这样进入时间机器内部，将身体在座位上固定好。  
 “这种的长时间载人跳跃虽然还是第一次，但是技术上应该是完全没有问题的。  
 &emsp;&emsp; 只要能按照目前以来的测试跳跃一样顺利的话就可以了。”  
-“*Okey-dokey！*”  
+“*Okey-dokey!* ”  
 铃羽一边回答着父亲，一边按照顺序将机器的开关一个接一个地打开。因为已经预见到今天迟早会到来的缘故，启动过程早已经过不知道几百次的模拟，让身体彻底记住了。机器原本微弱的声音，逐渐的开始变大。  
 “根据数据来看的话，以前的广播管正好就在这个地方的楼顶。  
 &emsp;&emsp; 但是高度可能会出现1米左右的误差，落地的时候应该会有冲击。”  
@@ -77,7 +77,7 @@
 “铃羽酱，篝她就真的拜托了啊！  
 &emsp;&emsp; 还有，记得告诉冈伦！*Steins;Gate* 一定存在！”  
 “‘绝对不能放弃啊你个混蛋！’这样告诉他！”  
-“*Okey-dokey！*”  
+“*Okey-dokey!* ”  
 接着，舱门彻底封闭。外面的混乱，还有真由姐与父亲最后的叮咛，都消失了。  
 “爸爸，最喜欢你了。”  
 铃羽对着已经关闭的舱门小声说着。  
