--- a/steins_gate_0/docs/0015.md
+++ b/steins_gate_0/docs/0015.md
@@ -1,6 +1,6 @@
 > <big> **闭时曲线的碑文 - 10** </big>  
 > 1.129848  
-> [ 2010/12/05 ] 接了电话。铃羽给冈伦桶子讲述由季的悲惨结局，再次请求冈伦尝试遭到拒绝——“那不是人类应该触及的领域”。新闻播报了新型脑炎。
+> [ 2010/12/05 ] 铃羽给冈伦桶子讲述由季的悲惨结局，再次请求冈伦尝试遭到拒绝——“那不是人类应该触及的领域”。新型脑炎首次出场与新闻。（此处可选不接电话，由于不影响结局且分支剧情趣味度一般，故省略。）  
 
 还没来得及犹豫，手指已经先于大脑替我接通了电话。  
 “怎么了？！”  
@@ -96,7 +96,7 @@
 “话说……可以看Nico直播吗？有动画《血旋》的特别篇直播哦。”  
 应该是无法继续坚持听那个声音了吧，桶子开了口。  
 “即使说不批准也会看的吧……请随意吧。”  
-铃羽就像放弃了一般回答道，默默地看着桶子坐到PC前戴上耳机。  
+铃羽就像放弃了一般回答道，默默地看着桶子坐到电脑前戴上耳机。  
 “呵呵。”  
 “怎么了叔叔？”  
 “没什么。想着真是对关系亲密的父女啊。”  
