--- a/steins_gate_0/docs/0016.md
+++ b/steins_gate_0/docs/0016.md
@@ -1,6 +1,6 @@
 > <big> **闭时曲线的碑文 - 11** </big>  
 > 1.129848  
-> [ 间章 ] 广播管楼顶，相隔35年的对话。发现可疑人员，但没有追到。
+> [ 铃羽视角 ] 广播管楼顶，相隔35年的对话。发现可疑人员，但没有追到。  
 
 [ 1975/08/13 13:05 ]
 
@@ -57,7 +57,7 @@
 铃羽递给篝一台小型对讲机。  
 “额……*Okey…dokey？*”  
 “每过90分钟，就在这栋楼前集合，互相确认状况。懂了吗？”  
-“*Okey-dokey！*”  
+“*Okey-dokey!* ”  
 “很好的回答！”  
 铃羽点了点头，然后摸了摸篝的头。  
 “好，任务开始！”
@@ -66,7 +66,10 @@
 
 从LAB里出来之后，铃羽照例在秋叶原各处完成了自己的任务，现在正在2010年的广播会馆楼顶望着身下的街道夜景。已经过了晚饭的时间了，在街上散步的人不少。  
 “35年……了吗……”  
-现实世界中，在这么长的时间之前，铃羽曾在同样的场所与篝交谈。然而就铃羽的体感时间而言，那不过是数个月之前的事。从这里俯瞰的景色同那时相比变化已经相当大了。今后的26年里，将会再次剧变。自己时机见证了这栋楼61年的变迁。与其说感慨万千，不如说，铃羽体会到了与他人生活在不同时间中的恐惧与孤独感。“利用时间机器来改变世界线，意味着脱离这个宇宙的组成原理。”冈部伦太郎的这番话闪过脑海。说起来最近，自己开始越来越多地回忆起篝的事。铃羽在定期巡视这条街道——她在寻找着椎名篝。连她在不在这座城市都不确定，线索也没有，也不知道现在的样子，所以这样的行为或许根本没用。即使如此，出于自己的责任，铃羽也一定要找到篝。结果今天也是一无所获，徒劳而终了。回过头，她看向时间机器。每天最后来到这里查看也是铃羽必行的工作，最重要的原因是为了确认父亲桥田至没有来过。只要铃羽没注意，他就会试图到这里来检查时间机器，就算跟他说这样会引发时间悖论也没用。因此，铃羽必须时刻保持警惕。说实话，精神上的疲惫一直是有增无减。  
+现实世界中，在这么长的时间之前，铃羽曾在同样的场所与篝交谈。然而就铃羽的体感时间而言，那不过是数个月之前的事。从这里俯瞰的景色同那时相比变化已经相当大了。今后的26年里，将会再次剧变。自己时机见证了这栋楼61年的变迁。与其说感慨万千，不如说，铃羽体会到了与他人生活在不同时间中的恐惧与孤独感。  
+“利用时间机器来改变世界线，意味着脱离这个宇宙的组成原理。”  
+冈部伦太郎的这番话闪过脑海。  
+说起来最近，自己开始越来越多地回忆起篝的事。铃羽在定期巡视这条街道——她在寻找着椎名篝。连她在不在这座城市都不确定，线索也没有，也不知道现在的样子，所以这样的行为或许根本没用。即使如此，出于自己的责任，铃羽也一定要找到篝。结果今天也是一无所获，徒劳而终了。回过头，她看向时间机器。每天最后来到这里查看也是铃羽必行的工作，最重要的原因是为了确认父亲桥田至没有来过。只要铃羽没注意，他就会试图到这里来检查时间机器，就算跟他说这样会引发时间悖论也没用。因此，铃羽必须时刻保持警惕。说实话，精神上的疲惫一直是有增无减。  
 这时屋顶的风声中混入了一声铁门开启的声音。难不成是父亲来了？铃羽仔细观察着昏暗的出入口。出现在那里的是远比父亲更加较小的，戴着猫耳的少女。  
 “喵喵~有了有了~铃喵，晚上好啊喵~”  
 “什么啊，原来是留未姐。”  
@@ -134,7 +137,7 @@
 心急的铃羽被放在楼梯的东西绊了一下，一脚踩空的她就这么从中间的部分滚落下来。采取受身动作护住头部的结果，令她的腰结实地撞到地上。忍住疼痛迅速起身，接着奔向楼外。结果只看到奔驰而去的摩托的大大的尾灯。可以看到驾驶的人被全黑的头盔和骑手服包裹着，再加上已经离开了相当一段距离，连是男是女都已经无法分辨了。尖锐的引擎声仿佛在嘲笑着咬牙切齿的铃羽一般，摩托车就这样转向转角处，消失在中央大道上。  
 “铃喵！没事喵？”  
 过了一会儿，菲利斯追了上来。  
-“被逃掉了……”
+“被逃掉了……”  
 “那个……最好收起来喵！”  
 “啊！”  
 慌张地把一直握着的枪收进怀中的枪套后，铃羽把被汗水黏在额头的头发撩了上去。  
