--- a/steins_gate_0/docs/0020.md
+++ b/steins_gate_0/docs/0020.md
@@ -1,6 +1,6 @@
 > <big> **双体福音的契约 - 02** </big>  
 > 1.129848  
-> [ 2010/12/15 ] 与雷斯吉宁教授二人晚饭后，在地下停车场被狂信徒袭击。
+> [ 2010/12/15 ] 与雷斯吉宁教授二人晚饭后，在地下停车场被狂信徒袭击。  
 
 轮胎摩擦地下停车场地面的声音传来，一辆深银色的旅行车正转向往这边开来。并不是国产车，而是一辆海外的不知道叫什么公司的，看起来很像跑车的旅行车。虽然我对车不太懂，但是据说正规经销商的话轻轻松松都超过了800万日元的价格。要说我为什么知道的这么清楚，是因为被车主炫耀过很多次了。  
 车在我们面前停下，按响喇叭示意着。从驾驶席上走下来的是井崎准教授。当我和雷斯吉宁教授、比屋定真帆吃饭的时候，偶然，因为别的事情打电话过来，然后和他说了教授他们的事情，他就提出回去的时候用他的车来送我们。雷斯吉宁教授虽然不想麻烦他，但是因为井崎强调无论如何都要这么做，于是就在这里见面了。明明是准教授却开这么好的车……大学内流传着，他是有钱的富二代，又或者是哪里来的社长夫人的援助——因为是独身所以把全部财产都拿来买车了——这是他以前悄悄告诉我的真相。当然是真是假我就无从得知了。  
@@ -37,16 +37,16 @@
 “piu——”  
 又是那个声音！太过于安静的细小，完全无法想象到那是枪声。但这次车窗并没有破，我的身上也没有被开洞。打偏了？难道被井崎的行动分心了吗？但是没有下次了。动起来！  
 先把比屋定真帆塞进后座，然后我爬进了驾驶室。幸好车子的引擎一直是发动着的。连关门的时间都不想浪费，我一口气使劲把油门踩到底。激烈的引擎声浪让地下的空气激荡起来，袭击者也被这震耳欲聋的声音和震动吓了一跳。然而，车子完全没有前进的意思，一动不动。  
-“*Shift*（换挡）！”  
+“*Shift!* ”  
 “不把档挂上是不行的啊！”  
 后座上低着头的雷斯吉宁教授和比屋定真帆，发出不输于引擎声的怒吼。总之先把脚从油门上拿开，看了看手边的换挡杆，现在是放在写着N字的地方。  
 “到底要怎么办！？”  
 “你怎么考的驾照？！”  
 “我没有！”  
 “欸欸！？”  
-这个时候，透过挡风玻璃看见袭击者重新架起了枪。男人盯着我，感觉那是能毫不犹豫地杀人的眼神。  
+这时，我透过挡风玻璃看见袭击者重新架起了枪。男人盯着我，眼神是能毫不犹豫地杀人的样子。  
 “灵魂，不会寄宿于硅晶之上！”
-糟糕！挡风玻璃上出现了蜘蛛网一样的裂痕。侧头部似乎有什么擦过。一阵刺痛传来，同时伴随着耳鸣。其他的所有声音都在远去，消失，意识都快要飞走了一样。  
+糟糕！挡风玻璃上出现了蜘蛛网一样的裂痕。头侧似乎有什么擦过。一阵刺痛传来，同时伴随着耳鸣。其他的所有声音都在远去、消失，意识都快要飞走了一样。  
 “关上门！快！”  
 比屋定真帆越过座椅，滑到副驾驶席上。  
 正在远去的意识被拉了回来。按照比屋定真帆说的，我用力地关上了驾驶室的门。同时比屋定真帆把变速箱挂上档，身子跨到我这边握住方向盘。  
