--- a/steins_gate_0/docs/0021.md
+++ b/steins_gate_0/docs/0021.md
@@ -1,6 +1,6 @@
 > <big> **双体福音的契约 - 03** </big>  
 > 1.129848  
-> [ 间章 2010/12/15 ] 铃羽救了冈伦三人后生病，在LAB得到桶子、真由理、由季照顾。
+> [ 2010/12/15 铃羽视角 ] 铃羽救了冈伦三人后生病，在LAB得到桶子、真由理、由季照顾。  
 
 有点头晕目眩。铃羽感觉不对劲，于是停了下来。由于她突然在马路的正中间站下，其他行人都一脸不满地躲着她。她深呼吸，等了一会儿，目眩仍不见好转。甚至连站立都有些困难了。眼前的景色如水波一样扭曲，难道是自己的错觉吗？自己仿佛是潜入了水里面，往来的喧嚣听起来渐渐远去。  
 ——难不成，这就是冈伦叔叔所说的 *Reading·Steiner* ？自己也出现这种迹象了吗？  
@@ -97,7 +97,7 @@
 “都怪你平常不运动才这副熊样。”铃羽内心如此叹道。  
 可是……她猛然发觉自己对于这样的父亲感到很开心，慌忙摇了摇头。  
 “一路辛苦，桥田君。我这正要熬粥呢。等她喝了粥，再喂她吃药。”  
-“*Okey-dokey！*”  
+“*Okey-dokey!* ”  
 桶子边答话，边来到铃羽身边。  
 “感觉怎么样？”  
 “不好……”  
