--- a/steins_gate_0/docs/0025.md
+++ b/steins_gate_0/docs/0025.md
@@ -1,13 +1,16 @@
 > <big> **双体福音的契约 - 07** </big>  
 > 1.129848  
-> [ 间章 2010/12/24 ] “铃羽很多事情都考虑的太多了。因为讨厌战争，所以才要改变世界。”——桥田至
+> [ 2010/12/24 铃羽视角 ] “铃羽很多事情都考虑的太多了。因为讨厌战争，所以才要改变世界。”——桥田至  
 
 ![](../pics/035.png)
 
-“……不可以的哟，铃羽姐。这种事是不可以做的！  
-&emsp;&emsp; 改变世界是不可以的！姐姐在说很奇怪的话！  
-&emsp;&emsp; 消除这个世界什么的是不可以的！绝对不会让你这么做的！”  
+“不行的哦。这样不好的哟……  
+&emsp;&emsp; ……绝对不行的哦，铃羽姐姐。  
+&emsp;&emsp; 不可以，那么做。”  
+“不可以改变这个世界！姐姐说的话太奇怪了！”  
+“不能抹掉这个世界！绝对不会让你这么做的！”  
 时间机器内部被刻下的弹孔。让铃羽想起了曾经在这个机器里发生的事。那个时候是和篝最后的一次交谈。篝用枪指着她的额头说了这番奇怪的话。之后，就再也找不到篝了。  
+
 “铃羽，怎么在发呆？难道身体还是不舒服吗？”  
 “欸？”  
 当铃羽回过神来的时候，身为父亲的桶子正很担心地窥探着她，然后递来了螺帽。  
