--- a/steins_gate_0/docs/0026.md
+++ b/steins_gate_0/docs/0026.md
@@ -1,6 +1,6 @@
 > <big> **双体福音的契约 - 08** </big>  
 > 1.129848  
-> [ 2010/12/24 ] 圣诞派对（上）众人聚齐，给铃羽惊喜/吓，聚餐。
+> [ 2010/12/24 ] 圣诞派对（上）众人聚齐，给铃羽惊喜（吓），聚餐。  
 
 如电话中所言，LAB里全是圣诞老人。而且是迷你裙圣诞老人。  
 
