--- a/steins_gate_0/docs/0032.md
+++ b/steins_gate_0/docs/0032.md
@@ -1,6 +1,6 @@
 > <big> **永劫回归的潘多拉 - 05** </big>  
 > 1.129954  
-> [ 间章 2011/01/21 ] 桶子安慰崩溃的铃羽。
+> [ 2011/01/21 铃羽视角 ] 桶子安慰崩溃的铃羽。  
 
 回过神来，铃羽已经坐在时间机器里，裹着毛毯。可能是一个劲在哭的原因，无论是自己进了时间机器，还是冈伦已经回去了，她都没有察觉到。作为父亲的桶子在旁边裹着和铃羽一样的毯子，看着铃羽。  
 
