--- a/steins_gate_0/docs/0033.md
+++ b/steins_gate_0/docs/0033.md
@@ -1,6 +1,6 @@
 > <big> **永劫回归的潘多拉 - 06** </big>  
 > 1.129954  
-> [ 2011/01/23 ] 冈伦带真帆和“红莉栖”逛秋叶原，电器街、抓人偶。
+> [ 2011/01/23 ] 冈伦带真帆和“红莉栖”逛秋叶原，电器街、抓人偶。  
 
 ![](../pics/049.png)
 
@@ -22,7 +22,7 @@
 “被当成是那种人的同类，前辈也太可怜了。  
 &emsp;&emsp; 从你的描述来看，桥田先生是个难以想象的变态啊。”  
 “是啊……对比屋定小姐失礼了。”  
-现在是周日的午后时分。和比屋定一起来零件商店是有原因的。她和雷斯吉宁教授决定在数日后回国。因为很快就要离开日本了，比屋定联系我，履行之前说好的承诺，给她当秋叶原的向导。于是我们今天上午在站前汇合，问她想去哪里的结果，就是现在这个状况。顺带一提，最先去的是友都八喜，接着是SOFMAP。除此之外，一些小路里面的二手PC和复古PC店也去了几家。  
+现在是周日的午后时分。和比屋定一起来零件商店是有原因的。她和雷斯吉宁教授决定在数日后回国。因为很快就要离开日本了，比屋定联系我，履行之前说好的承诺，给她当秋叶原的向导。于是我们今天上午在站前汇合，问她想去哪里的结果，就是现在这个状况。顺带一提，最先去的是友都八喜，接着是SOFMAP。除此之外，一些小路里面的二手电脑和复古电脑店也去了几家。  
 “比屋定小姐，很喜欢这种零件吗？”  
 我出于好奇问了一句。  
 “与其说是喜欢零件，不如说是喜欢组装东西呢。  
