--- a/steins_gate_0/docs/0034.md
+++ b/steins_gate_0/docs/0034.md
@@ -1,6 +1,6 @@
 > <big> **永劫回归的潘多拉 - 07** </big>  
 > 1.129954  
-> [ 2011/01/23 ] 冈伦与真帆去祭拜红莉栖，聊起《中钵论文》和红莉栖笔记本电脑与硬盘，来到桶子秘密基地。
+> [ 2011/01/23 ] 冈伦与真帆去祭拜红莉栖，聊起《中钵论文》和红莉栖笔记本电脑与硬盘，来到桶子秘密基地。  
 
 “那么接下来要做什么？还有其他想去逛的地方吗？  
 &emsp;&emsp; 不过动画和游戏的商店什么的你也不会有兴趣吧……”  
@@ -105,7 +105,7 @@
 “嗯，是我。”  
 大概是因为，对于比屋定来说，红莉栖的死实在是有太多匪夷所思的地方，所以才会深究红莉栖被杀的理由。笔记本电脑和硬盘中可能存留着什么提示，会这么想也是人之常情。不过，如果我的推测真的正确，那么这个笔记本电脑的存在本身就极度危险……！那正是，拥有引爆第三次世界大战之力的，潘多拉的魔盒。  
 “你为什么要瞒着我？”  
-“当初我并不知道你和桥田的关系，委托桥田办这件事也纯属巧合。  
+“当初我并不知道你和桥田先生的关系，委托他办这件事也纯属巧合。  
 &emsp;&emsp; 而且我觉得你在隐瞒一些关于红莉栖的事情。  
 &emsp;&emsp; 我不可能向这样的你和盘托出吧。  
 &emsp;&emsp; 也不是说我不信任你……  
