--- a/steins_gate_0/docs/0036.md
+++ b/steins_gate_0/docs/0036.md
@@ -1,6 +1,6 @@
 > <big> **永劫回归的潘多拉 - 09a** </big>  
 > 1.129954  
-> [ 2011/01/23 - 2011/01/26 ] 优先“红莉栖”，躲开黑衣人。事后在菲利斯住所，冈伦与真帆交流中钵论文的红莉栖原稿与『Amadeus』军用化情况。真帆和教授回国，继续让冈伦担任测试员。
+> [ 2011/01/23 - 01/26 ] 优先“红莉栖”，躲开黑衣人。事后在菲利斯住所，冈伦与真帆交流中钵论文的红莉栖原稿与『Amadeus』军用化情况。真帆和教授回国，继续让冈伦担任测试员。  
 
 对于“红莉栖”这个时候打来很是在意，于是我对二人解释了一下，接起了电话。  
 “嗯？怎么了？”  
@@ -138,7 +138,7 @@
 两个人环视着已经空空如也的办公室。不管怎么说也是不得安宁的两个月啊。  
 “*Maho* 觉得怎么样呢？毕竟日本也是你的另一个故乡吧？感想如何？”  
 “想要快点回到大学，埋头开始做研究啊。这两个月只是一味地在整理资料。”  
-“*Hahaha*，*Maho* 真是认真啊。”  
+“*Hahaha!* *Maho* 真是认真啊。”  
 “还有……能够感受这红莉栖度过了最后时光的国家的气氛……真是太好了。”  
 “*Maho……*”  
 只是，还没有弄清楚红莉栖死亡的真相，来日本之后更是多了不少疑团，并且只能这样无可奈何地带着疙瘩回国，真是令人咬牙切齿。如果冈部把所有事都说出来的话……  
