--- a/steins_gate_0/docs/0037.md
+++ b/steins_gate_0/docs/0037.md
@@ -1,6 +1,6 @@
-> <big> ** 私秘境里的圣痕 - 01** </big>  
+> <big> **私秘境里的圣痕 - 01** </big>  
 > 1.129954  
-> [ 间章 2011/06/03 ] 真帆偷听雷耶斯和雷斯吉宁密谈被抓。
+> [ 2011/06/03 真帆视角 ] 真帆偷听雷耶斯和雷斯吉宁密谈被抓。  
 
 时间已经过了晚上11点，维克多·孔多利亚大学内一片宁静。就研究室而言，因为经常有从深夜一直进行到早上的实验，所以并非完全没有人员的进出，但是相比白天来说还是相当的安静。因为走廊的照明已经关掉了，一个人走的话还是有些不安。真帆住在相邻的研究员用公寓。这天晚上，她在自己的房间里思考各种问题，脑子都快炸了。从房间正好能看到的“脑科学研究所”的窗子，这个时候还亮着灯。一定是雷斯吉宁教授还在那里吧，这样想着真帆用保温壶装了咖啡准备带过去。  
 （说起来，为什么我要执着于时间机器的研究呢……）  
@@ -24,7 +24,7 @@
 雷斯吉宁教授惊讶于真帆的忽然来访，立即从椅子上站起迎了过来。  
 “怎么了，都这么晚了？对于小孩子来说，现在是应该睡觉的时间哟？”  
 “这句话，原封不动地还给您。”  
-“*Hahaha*。没错呢！”  
+“*Hahaha!* 没错呢！”  
 对于真帆尖锐的反击，雷斯吉宁教授像小孩子一样无邪地笑了。  
 “从我的房间，看到这边灯还亮着——这个，请用。”  
 雷斯吉宁教授桌上放着的杯子正好是空的，真帆把保温壶里的咖啡倒了进去。并不是真帆喜欢的绵密香甜的欧蕾咖啡，而是对教授口味的黑咖啡。和蒸汽一起，一股好闻的香味在房间里散开。  
