--- a/steins_gate_0/docs/0042.md
+++ b/steins_gate_0/docs/0042.md
@@ -1,6 +1,107 @@
-> <big> ** 私秘境里的圣痕 - 01** </big>  
+> <big> **私秘境里的圣痕 - 06** </big>  
 > 1.129954  
-> [ 间章 2011/06/03 ] 真帆偷听雷耶斯和雷斯吉宁密谈被抓。
+> [ 2011/07/03 ] 重遇真帆，与“红莉栖”三人闲聊。确认红莉栖笔记本被冈伦破坏。  
+
+进入7月，关东地区的日照接近顶峰，正式迎来了夏天。加上热岛现象的影响，连续几天新闻里都播放说今年可能是数十年来最热的夏天。就是这样的7月的第一个周日，我和真帆约在秋叶原会面。我先到达了约定的UPX的露天咖啡，稍微等了会儿真帆也来了。  
+“冈部先生。”  
+“好久不见。”  
+真帆要了一杯冰咖啡，喘了口气。我接着话题继续寒暄：  
+“虽然这么说，平时视频聊天也算是见面的。”  
+“对啊，并没有什么好久不见的感觉。”  
+真帆对服装和外貌并没有太注意，不如说和半年前几乎相同……这副样子，会被当作暑假悠闲地去附近朋友家玩的小学生吧……如果我指出这一点，她肯定会不高兴，所以我很自觉地闭上嘴。  
+“完全没想到你来这边了。要不是偶遇了雷斯吉宁教授，我到现在还不知道呢。”  
+“本来打算安顿好了再联系你的哟。况且关于‘红莉栖’的事情也要定期联络。”  
+“这次来，是为了新型脑炎的研究？”  
+“雷斯吉宁教授是这个原因呢。  
+&emsp;&emsp; 我虽然算是他的助手，但是要说的话还是负责『Amadeus』。  
+&emsp;&emsp; 出过什么问题吗？虽然这么问，大概的情况我也通过一直以来的报告了解了。”  
+“啊，并没有什么问题。虽然最近陪‘红莉栖’聊天还是挺辛苦的呢。”  
+
+“我说——辛苦是什么意思？”  
+一句语气不善的话音从我放在桌子上的手机传来。  
+『Amadeus』的APP一直运行着。理所应当地，我们的对话都被“红莉栖”听到了。  
+“与最初见面的时候相比，感觉说话方式越来越严厉了。”  
+“是你自己觉得怕我而已吧？”  
+“……或许吧。”  
+就像是回到了α世界线，一对不分彼此的伙伴在LAB打嘴仗的日子……我们的关系逐渐演变成了这样。这种情况，对我而言是好是坏，自己也开始难以分辨了。明明是想忘记红莉栖的事情的……  
+“比屋定反而是在第一次见面的时候比较严厉呢。”  
+“那，那是因为……”  
+“对初次见面的人，前辈会格外严厉的。要说为什么的话——”  
+“因为总是得不到和自己年龄相符的对待。（x2）”  
+两个人异口同声。
+“所以我才忍不住表现得比较生气嘛。”  
+&emsp;&emsp; 熟悉到一定程度的话，对方就不会对我的外貌说三道四了吧？  
+&emsp;&emsp; 所以我才能安下心来说话。”  
+果然，没有评价服装的事情是正确的……好险好险……  
+“回到『Amadeus』的话题。‘红莉栖’的语气变严厉，是个很有趣的征兆啊。  
+&emsp;&emsp; 那是对我和教授不会表现出来的一面对吧？  
+&emsp;&emsp; 也可以说是对你敞开内心到如此程度了吧。”  
+“才没有。”  
+对于红莉栖若无其事的抗议，真帆用微笑带过。  
+“这样的心理活动，可以从程序的层面进行解析。  
+&emsp;&emsp; 若是‘她’只和我还有教授对话，绝对看不到的这种变化。  
+&emsp;&emsp; 光是这一点，让冈伦继续测试就有价值了。”  
+“这样吗……”  
+“雷斯吉宁教授也对此给予了很高的评价。”  
+“我觉得是过高评价。实际上，和我说话的时候他的牢骚和抱怨很多，不怎么有男子气概。”  
+“……”  
+我对自己的性格变得消极这一点还是有自觉的。毕竟，经历过那些事情。就算是这样，也没必要汇报给真帆吧……既然如此，我也只好以眼还眼。  
+“顺便说一句，还有到现在为止没有报告过的情报。”  
+“是什么？”  
+“我想，这大概是比屋定和雷斯吉宁教授都没有掌握的情报。”  
+“等等，你准备说什么？真帆前辈和教授都没有掌握的情报？关于我的？”  
+“『栗悟饭和龟派气功』。这样说你明白了吗？”  
+“等……⊙Д⊙！”  
+其实在几周前，我心血来潮在网上搜索了下『栗悟饭和龟派气功』，这是红莉栖生前在@ch回帖时使用的固定ID。根据搜索，活动记录最早可以追溯到2008年，到2010年7月一度中断了——再之后，12月又重新开始发帖了。到现在一直持续着。如果不是红莉栖的幽灵在发帖，或者其他人冒名顶替的话，那么发帖的肯定是——  
+“冈部伦太郎先生，我们俩先单独谈一谈吧？”  
+听着‘她’的语气从强装和善到压抑不住逐渐冰冷，我拿起手机开始低声交谈。  
+“果然是你干的好事啊。这样瞒着他们不好吧？”  
+“向真帆前辈报告更不好！”  
+“为什么？”  
+“那当然是因为……我从来没有跟前辈提过在看@ch啊！”  
+“堂堂正正的不就好了。看@ch、发帖子啥的，又不是犯罪。  
+&emsp;&emsp; 对吧？@cher‘红莉栖’——”  
+“你这家伙……下次再这么叫我，我就把有的没有的都写到@ch去哟？”  
+“你这种行为才是，离犯罪只有一步了……”  
+‘她’的话让我愣神了片刻，随即忍不住苦笑。这样的对话，感觉十分怀念。当时的我得寸进尺，经常这样惹怒生前的红莉栖。  
+“呐，究竟要说什么？”  
+“什么都没有！请不要在意！请把今天的记忆从海马体内完美地埋葬掉！”  
+真帆终于忍不住开口想要解惑。“红莉栖”也立刻用塞满敬语的句子回应。不过——  
+“就算隐藏起来，总有一天会曝光的哦？”  
+“你够了给我闭嘴……”  
+“哈哈哈。”  
+“……果然你们俩，比半年前感情更好了呢。”  
+“啊！前辈，对不起……”  
+“欸？为什么要道歉？”  
+“不……难得冈部和真帆前辈好久不见……我却一直讲个不停。  
+&emsp;&emsp; 就这样，之后的时间请你们二位慢慢享受……”  
+“我并不是这个意思啦。”  
+“说到底，都怪冈部说了奇怪的话呢……”  
+“是这样么？『栗悟饭和龟派气功』。”  
+“哇~啊——啊~~求你别再说了。”  
+异常拼命地想要隐藏作为@cher的这一事实，和原版并无差别。  
+“我要稍微冷静下，先挂了啊。失礼了……”  
+“红莉栖”从画面上消失了。  
+作为对最近言辞愈发严厉的“红莉栖”的小小反击成功，我心里暗爽。不过要是开玩笑过头了“她”应该会记仇，所以还是适可而止吧。  
+“‘栗子饭’是什么啊？”  
+“无论如何都想知道的话，请去问‘红莉栖’吧。”  
+要是我擅自说出来，“她”绝对会闹别扭不再理我了。  
+“那么，这次会在这边呆多久？”  
+“可能要比上次久呢。”  
+&emsp;&emsp; 因为雷斯吉宁教授研究的新型脑炎，现在还基本上什么都还不清楚的样子。  
+&emsp;&emsp; 说不定也有可能让我一个人先回去。  
+“有时间的话，到LAB露个脸吧。桶子和真由理，一定会高兴的。”  
+“真由理小姐当然不用说，桥田先生……怎么说呢……”  
+终于连真帆也开始认识到桶子的本性了。  
+而桶子，现在应该在和阿万音由季约会。  
+
+“话说回来，红莉栖的笔记本电脑，那之后怎么处理了？”  
+“那个……破坏掉了。”  
+“……”  
+“这是最好的判断了。我之前也是这么说的吧？”  
+“……嗯，是呢。”  
+真帆听到我的回答，寂寞地垂下了头。虽然之前也告诉她过要这么做，实际上对于失去红莉栖的遗物这一点，她果然还是很在意的。
+
 
 
 <br/>
@@ -8,4 +109,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0036) | [home](../../) | [next→](./0038) |
+| [←prev](./0041) | [home](../../) | [next→](./0043) |
