--- a/steins_gate_0/docs/0043.md
+++ b/steins_gate_0/docs/0043.md
@@ -1,6 +1,178 @@
-> <big> ** 私秘境里的圣痕 - 01** </big>  
+> <big> **私秘境里的圣痕 - 07** </big>  
 > 1.129954  
-> [ 间章 2011/06/03 ] 真帆偷听雷耶斯和雷斯吉宁密谈被抓。
+> [ 2011/07/03 铃羽视角 ] 桶子和由季约会。  
+
+GOGO咖喱店，虽说是周日，到了下午两点，用餐的高峰也已经过去，店内用餐的客人占据了差不多一半的座位。在这当中——铃羽坐在最里面的座位，把鸭舌帽檐压得很低藏住脸，认真地观察着坐在不远处的一对情侣客人。  
+“久等了，超大份咖喱来了~！”  
+店员伴随着充满活力的声音，在那对情侣的眼前，咚的放下两个巨大的银色盘子——应该说是盆。其他客人看到这一场景开始骚动，毕竟这对情侣太引人注目了。虽然男方是符合超大份咖喱印象的巨汉，但是女方却是一位苗条温柔的美女。无论是这对情侣的组合，或是美女和超大份咖喱的组合，都非常的不平衡。超大份咖喱总之就是分量大，超大。铃羽根据经验很清楚这一点。巨大的银色盘子装满了米饭和咖喱，在这之上还放着两块巨大的炸猪排、炸虾还有香肠，以及煮鸡蛋和堆得像小山一样的卷心菜。是比一般套餐多了两到三倍的咖喱，配以所有配菜的怪物级套餐。就算是食欲旺盛的年轻男性客人，要吃完这个也并不是一件容易的事情。 
+（究竟为什么，第一次约会的午饭要选超大份咖喱啊，爸爸？）  
+铃羽感觉有些焦躁。她观察着的美女与野兽的情侣组合，毫无疑问就是桶子和由季。  
+上午在有乐町看完电影之后，来到秋叶原……然后走进了GOGO咖喱。在此期间铃羽一直尾随其后，所以才对父亲选择的约会路线感到难以置信。  
+（虽然我的话GOGO咖喱也完全没有问题，不如说是很喜欢，不过——）  
+（难得的初次约会，不是还有很多其他的选项吗？）  
+铃羽手里紧紧握着勺子，咬牙切齿。就算是对2011年日本年轻人文化不太了解的自己也这么觉得，由季心里应该也相当为难吧——铃羽这样担心着。然而……  
+“哇，比照片上更厉害呢！”  
+意外地，由季毫不在意周围的眼神，对着面前的超大份咖喱发出天真无邪的声音。  
+“欸、我说，那个……阿万音氏……如果吃不完的话，那个……就交给我来帮你解决吧……”  
+“好，谢谢啦。不过，别看我这样，也相当能吃的哟？”  
+“是、是吗……真想不到哦。”  
+“嘿嘿嘿~实际上，我一直在店外看着这个菜单……想要吃上一次呢。  
+&emsp;&emsp; 能带我来这里，我很高兴。”  
+“那，那真是太好了哦。”  
+看来铃羽是多虑了。然而她又察觉到父亲的样子有些奇怪。话说自从电影院出来之后，说话方式和走路姿势就变得很别扭。一直弯着的背，也勉强挺了起来。总之一举一动都很僵硬，像破烂的机器人一样。而且，用这危险的动作往杯子里倒了许多次水，一杯接一杯地灌进肚子里。  
+“啊，不好意思。也请帮我倒一杯水……”  
+“哈？好的好的~请用~”  
+“十分感谢。”  
+看着父亲往由季的杯子里倒水的动作，铃羽心中涌起了不详的预感。结果不出所料，动作生硬的他差点把水倒在了由季的手上。  
+“呀……！”  
+“没、没、没没……没事情吧！？”  
+“嗯，只是手上打湿了一点。比起这个，赶快开吃吧？”  
+由季用自己的手帕迅速地擦了下手和桌子，眼睛闪着光地拿起了勺子和叉子。  
+“那么，我开动了！”  
+“我、我开动了。”  
+由季看起来吃得十分开心，相对照下，桶子显得太过斯文且安静，就像松鼠吃松子的动作一样，切一刀炸猪排小口小口慢慢地咀嚼着。期间，二人之间完全没有对话。  
+（到底在干什么啊爸爸……这样下去，会被妈妈讨厌的啊！）  
+事情发展成这样，铃羽想着用RINE给父亲打气。就在她正准备拿出手机的时候——  
+“请用，超大份咖喱！咖喱加量！久等了！”  
+“……！？”  
+一个巨大的盘子气势汹汹地出现在铃羽面前的桌子上。周围的客人又开始窃窃私语起来。说起来，尾随他们进入店内，铃羽也习惯性地点了超大份咖喱——而且咖喱加量——她自己不小心忘记了这回事。因此变得非常醒目。在这绝不算大的店内，毫无疑问是自杀行为。  
+
+![](../pics/069.png)
+
+“啊啦？”  
+“唔……”  
+果然，和由季完全对上视线了。  
+“铃羽！你也在啊？”  
+“啊——那个……嗯~真巧呢~由季小姐，还有哥哥……”  
+“打声招呼也好啊。”  
+“不，完全没注意到啊~”  
+虽然现在应该果断离开店里，但是却做不到放着眼前的超大份咖喱不吃而离开。对于经历过战争时代的铃羽来说，浪费食物是绝对不能被原谅的事情。在由季和父亲的视线下，她不得已拿起勺子。  
+“嘛，就是这样的~两位请慢用……”  
+事已至此，只有争分夺秒地赶紧吃完面前的超大份咖喱离开，也为了不打扰那两个人！但是——与铃羽的觉悟相反，由季迈着小碎步轻快地接近，一下端走了铃羽的咖喱。  
+“啊……？”  
+“那个，抱歉，店员先生？这是我的朋友，能换一个位置吗？”  
+“好的，请便！”  
+“OK啦。一起吃吧？”  
+“等等等……等等？为啥？”  
+“要说为啥……你看，铃羽小姐你不也点的超大份咖喱嘛，我想着这次务必来场比赛呢。”  
+“哈！？”  
+“裁判就请桥田来担任吧~”  
+然后，不等回答，由季就把铃羽的咖喱拿到了自己旁边的座位。  
+“不，我说？！”  
+铃羽只得移动到两人旁边，凑到由季耳边小声说：  
+“不是正在约会中吗？”  
+“欸？啊，是的。正在约会中。被人这样说还是很害羞呢，嘿嘿嘿。”  
+“==……”  
+父亲毫无反应。刚才的对话他应该听到了的。  
+“那个，因为我没有约会过所以不太了解不过……  
+&emsp;&emsp; ……约会中，会和其他女生进行咖喱速食比赛吗？”  
+“这个嘛，谁知道呢~但是，你看，动画啊漫画之类的，不是有这样的情节吗？  
+&emsp;&emsp; 不想哥哥被抢走的妹妹，对他的女朋友喊道‘来决一胜负吧！’这样的。”  
+不知为何，由季在说这些话的时候，特别充满干劲，眼神闪闪发光。铃羽被她的气势压倒了。  
+“不、不知道啊……是这样的吗，哥哥？”  
+但是，作为被求助对象的桶子，依旧像机器人一样僵硬地，重复着将咖喱送进嘴里咀嚼的动作。  
+“……哥哥？”  
+听到再次呼唤，他一卡一卡地将脖子转向了这边。  
+“ni shuo shen me（你 说 什 么）”  
+“你怎么了？总觉得好奇怪哟？”  
+“mei you zen me o（没 有 怎 么 哦）  
+&emsp;&emsp; bing bu qi guai o（并 不 奇 怪 哦）”  
+“？？？”  
+这下他的语言系统也彻底机器人化了。铃羽忍不住看了下由季的表情。  
+“……”  
+她现在终于第一次露出了困惑的表情。  
+
+结果，在这之后，由季和铃羽进行了超大份咖喱速食对决，两人都令人吃惊地吃得一干二净，铃羽最终以微弱的优势胜出。这是一场店内的客人以及店员都拍手起哄的白热化的比赛。但是，在此期间，桶子依然还是那样，一个人机械化地持续吃着咖喱……这不用说是约会了，就连对话都没有，只有让他一个人先回去了。可以的话，铃羽想立即向本人询问刚才那么不中用的理由……不过她重新考虑之后，决定先和由季好好谈一次。一直以来，铃羽因为害怕真相暴露所以刻意避开由季。可现在已经是7月了，不久之后，她就会从这个时代消失。这可能就是最后的能和由季好好说话的机会了。  
+“呼……幸亏有铃羽小姐在，真是太好了……”  
+目送至离去后，由季轻声叹了一口气。  
+“我，说不定做了什么惹他生气的事情了……刚刚桥田和我在一起好像并不是很开心……”  
+“只是单纯地……紧张了吧？”  
+“可是，看电影之前还很开心的说着话哟？  
+&emsp;&emsp; 然后，电影之后，突然变得疏远起来……  
+&emsp;&emsp; 我是不是做错了什么……  
+&emsp;&emsp; 让他带我来咖喱店也是我的提案……  
+&emsp;&emsp; 如果一直是那个样子，实在是有点不知道怎么办……  
+&emsp;&emsp; 因此，就向恰好在店里的你求助了。”  
+“嗯……”  
+大概在看电影的过程中发生了什么吧。  
+铃羽并没有跟到电影院内，而是待在外面打发了差不多2小时的时间。  
+“那个……由季小姐你……为什么会喜欢上哥哥的？”  
+“欸？欸欸？！”  
+“不，虽然我这么说不太好，但是哥哥他，并不是那种受欢迎的类型吧。”  
+“……铃羽小姐觉得你哥哥怎么样？”  
+“我？”  
+“喜欢吗？讨厌吗？”  
+“……”  
+“是喜欢吧？一看就知道了。”  
+“嘛……嗯。”  
+虽然有很多看不惯的地方，但是毫无疑问，铃羽是非常喜欢父亲的。  
+“等等，我喜不喜欢都无所谓吧？”  
+“呀嘿嘿~”  
+“那么，由季小姐呢？”  
+“我……还不太清楚是不是喜欢……”  
+“……是、是么。”  
+的确，不要说让桶子向由季告白了，今天都还只是第一次约会呢。二人也没有那么经常性地见面相处，甚至还没有以异性的角度去认知对方。铃羽在这将近一年的时间一直陪在桶子身边，也借助了真由理和菲莉丝的帮助，想要撮合两人。尽管如此，也并没有什么明显的进展。想到以后的事情，铃羽都会感觉到难以言喻的不安——自己的父亲不再是那个父亲，自己的母亲不再是那个母亲，父亲和母亲一起消失了——她控制不住地想象了这样的未来。  
+（这样的未来……才不要呢！）  
+铃羽心底这么想着，正面注视着由季的双眼。  
+“我啊，再过不久…就要离开这里了。”  
+“哎？”  
+“要搬到…稍远些的地方。”  
+“是、是吗！？”  
+“大概……应该不会再回来了。  
+&emsp;&emsp; 我很担心爸——哥哥  
+&emsp;&emsp; 所以啊，由季小姐，  
+&emsp;&emsp; 这种事，虽然由我来拜托有点奇怪——”  
+说到这里，铃羽深深地鞠躬——  
+“桥田至，就拜托您了！”  
+“……”  
+“……？”  
+由季没有回答。铃羽战战兢兢地抬起头，瞄了下由季的表情。  
+那副表情，感觉有些寂寞，又有些悲伤。  
+“我，到底想怎么样呢……”  
+由季自言自语着。对于这些话，铃羽——  
+
+“啊——！怎么办啊！这样下去就是分手危机了啊！虽然还没有开始！”  
+——铃羽回到LAB，就忍不住怒斥着一脸消沉的父亲。  
+“呜哦~铃羽对不起啊~桥田家已经不行了嗷——！”  
+“别就这么气馁啊！这可不是闹着玩的！  
+&emsp;&emsp; 总之，对于今天为什么表现成那样，给我好好解释一下。  
+&emsp;&emsp; 早上出发的时候不是还挺开心的吗？妈妈也说了，看电影过程中也挺正常的。”  
+“嗯……”  
+“到底发生了什么？”  
+“哎呀，是这样的，你听我说哦……  
+&emsp;&emsp; 电影院的座位不是很窄么？所以我为了不妨碍到阿万音氏，就尽量靠边坐。  
+&emsp;&emsp; 这时，椅子忽然咔嚓一声，好像要坏掉了。”  
+“哎？”  
+“于是，我慌慌张张地想要支撑住身体，就抓向了扶手——  
+&emsp;&emsp; 但那、那里…那里啊！不是扶手，而是阿万音氏的…她的…手啊！！”  
+“……嗯？”  
+“这件事，妈妈完全没有提到的说……”  
+“我没有说谎哦！那种柔软的触感不可能是扶手！肯定是女孩子的手！”  
+“是、是哦……”  
+“但是我，牵女孩子的手什么的，二次元暂且不说，三次元里几乎是毫无经验……呜呜呜……”  
+“后来呢？怎么了？”  
+“你也知道阿万音氏很温柔的吧……应该是不想让我难堪吧，居然没有甩开我的手哦……  
+&emsp;&emsp; 我是这种体型对吧？手汗什么的很重对吧？会变得黏糊糊的对吧？  
+&emsp;&emsp; 然而阿万音氏什么都没有说就保持着那样……  
+&emsp;&emsp; 不知怎么的，之后我就特别地介意这件事……”  
+“啊，原来如此。所以变得那么窝囊了啊……”  
+“阿万音氏心里肯定在想‘恶心！烦人！快放开！变态！’这种不会错的……”  
+“妈妈不是这种人啦。”  
+不如说，从由季的言行看来，她似乎是认为自己做了失礼的事而被讨厌了所以闷闷不乐。  
+问题是，那时她说的话——“我，到底想怎么样呢……”——究竟是想表达什么呢？  
+“真搞不懂妈妈……”  
+“铃羽啊~事到如今就放弃妈妈，我们两个人好好生活下去吧~！”  
+“不要胡说八道啊！再说了，我要怎么出生啊！”  
+“呜…但是我做不到啊~！”  
+“爸爸不努力怎么行？！要把这此危机转换为机会啊！”  
+铃羽抓着亲生父亲的衣襟，摇晃着那巨大的身体。  
+“不然的话——”  
+铃羽脑海中又浮现出和由季分别的时候，对方脸上的那副表情。  
+“……不然的话，会变得不可挽回哦。”  
+“也是啊……”  
+要担心的事又增加了，铃羽的心中又稍微产生了动摇。  
+——早知道这样的话，也许不应该和由季说那些话的。  
+铃羽再次感受到了，因为不是这个时代的人而产生的无力感。  
 
 
 <br/>
@@ -8,4 +180,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0036) | [home](../../) | [next→](./0038) |
+| [←prev](./0042) | [home](../../) | [next→](./0044) |
