--- a/steins_gate_0/docs/0045.md
+++ b/steins_gate_0/docs/0045.md
@@ -1,6 +1,217 @@
-> <big> ** 私秘境里的圣痕 - 01** </big>  
+> <big> **私秘境里的圣痕 - 09** </big>  
 > 1.129954  
-> [ 间章 2011/06/03 ] 真帆偷听雷耶斯和雷斯吉宁密谈被抓。
+> [ 2011/07/ ] 确认雷斯吉宁STRATFO身份。  
+
+伴随着喉咙中涌动的疼痛醒来
+咳，咳咳……
+想要捂住嘴，但手像是被什么东西拽着无法动弹。
+缓慢睁开眼看见自己的腿，同时也理解了自己被绑在椅子上这一状况。
+慢慢抬起头。
+手腕被索带固定在椅子扶手上。
+随意乱动的话会被索带牵扯的很痛。
+环顾四周。
+从未见过的房间。
+并排放置着让人会错以为是医院手术室里面的机器。
+另一方面，墙上并排挂着许多显示器，可能是哪个保安室的控制室。
+四周都没有窗户。
+所以完全不知道这是哪里。
+有人……吗？
+一说话，喉咙处又传来一阵痛楚。
+紧接着回想起了被真帆下杀手的事情。
+为什么她会做这种事。
+比起愤怒心中现在更多的是疑惑。
+呀，Rintaro。醒了吗？
+伴随着脚步声，迎面从昏暗的灯光下浮现出一个巨大的身影。
+我记得那个声音。
+欸……？
+雷斯吉宁……教授……？
+感觉怎么样？要是口渴的话，我会让人准备好水。
+仔细一看在场的并不只有雷斯吉宁教授一人。
+他身后数位穿着黑色西装的男人们一言不发，紧紧的盯着我。
+所有人都拿着手枪。
+根据他们那类似MIB的打扮，我回想起半年前桶子在店里遭遇到的那群外国人。
+或者说，这跟那时候的是同一群人？
+这……究竟是……
+虽然有成堆的问题想问，但首先无法理解的是为何雷斯吉宁教授在看到我现在的状况却没有伸出援手。
+当然，脑中也浮现出了既简单又妥当的答案。
+把我关在这里的是雷斯吉宁教授本人，真帆受教授的指示把负责把我捉住——这一答案。
+但是，我并不愿相信所想的就是事实。
+这，究竟是哪……？
+所以我并没有问这么愚蠢的问题。
+我果然没有看错呀
+你简直就是“情报”的宝库啊
+现在就算说是能跟合众国总统匹敌的人物也不为过
+教授并没有回答我的问题，而是一脸满足的微笑着这么说。
+脑中不禁警觉了起来。
+对雷斯吉宁教授的戒备心正在逐渐加强。
+我……被监禁了吗？
+相比于监禁，保护这种说法更为恰当呢
+你的价值被公之于众的话，盯上你的人会不断涌现出来呢
+这是雷斯吉宁教授你……指示的吗？
+没错，我认为这是最妥当的做法
+从Maho那里了解了你所携带的“情报”呢
+比屋定小姐在哪？
+应该在旅馆里休息着吧？
+比屋定是为了从我这里套出情报而接近我的吗？
+最初不是这样的哟。但从结果上来看，还是变成这样了呢
+你也是吗……？
+对我如此亲近，也是因为这么算计的吗！？
+你，究竟是什么人！？
+嘛嘛，冷静一点
+以前跟你说过的哟？科学家必须时常保持冷静。只有在试验成功了才能放声欢呼
+咕……
+我反被一脸镇定的雷斯吉宁说教了。
+被人背叛的这种心情逐渐在心中扩散开来。
+愤怒，懊悔，悲伤。各种感情交错起来使我咬紧了牙关。
+雷斯吉宁并不在意我现在的态度，向身旁的那群男人用英语做出了简短的指示，让他们去隔壁房间。
+剩下的就只剩下我和雷斯吉宁教授了。
+那么，Rintaro。我来告诉你我的另一个工作吧
+……另一个工作？
+我回想起以前前往其他世界线的事情
+是要求日本立刻把我交出来的美国组织。这些事下山曾告诉过我。
+CIA？NSC？
+但是雷斯吉宁还以苦笑。
+真是没想到会被当成和他们一类啊
+他们只是一群无能的公务员集合体
+你知道“STEATEGIC?FOCUS”这一美国民间情报机关吗？
+“STEATEGIC?FOCUS”？
+接着，脑中突然闪过数个新闻报道。那是在过去中二病全开的时候于整合了阴谋论的网站上看到过。
+STRATFO ！？
+记得是将CIA都难以得到的俄罗斯弹道导弹的最高机密情报轻松搞到并拿来买卖的家伙。
+因为他们，CIA颜面扫地。
+同时也动摇了俄罗斯军队的战略根基。
+有传闻说在海湾战争或伊拉克战争，比谁都能第一步拿到各个参战国的军事情报，根据必要性散落于全球各地。
+全世界都称呼其为“暗之CIA”。
+你，是STRATFO的人……？
+但是你不是脑部科学研究所的主任研究员吗……
+那当然是我的主业。
+话说回来我常常会碰上这么强调的人呢
+“人类是一群会杀戮的猴子”，只有人脑会因为发达的大脑新皮质而拥有狂热的信仰和野心，从而引发战争
+但是我每次听到这话就会想。无法接受这种愚蠢的想法，简直一派胡言
+然而为何人类间无意义的战争从未结束。你知道吗，Rintaro？
+……
+这是因为“情报”的缘故哟
+人类无论是谁，都是附属于某个共同体的群体
+就算每个个体想自主行动，但终究所有的大脑还是跟从共同体中流传的“情报”是紧密相连的
+然后他们不得不作为一个整体生存下去。
+举个例子吧。对呢，嗯，虽然不是什么好例子……
+欧洲某国在中世纪魔女狩猎的时代犯下的人类史上最残酷的大屠杀
+20世纪中叶，它已经发明了原子弹，真是时代变迁啊
+而且，这个国家还是当时最文明的国家之一
+关于领导人资质这个问题呢，就交给历史学者去解决了……
+你知道那些亲身参与虐杀的人的事情吗？
+他们真的仅仅是只会杀人的猴子吗？
+不，他们只是再正常不过的普通人罢了
+按脑部科学的观点来看，应该是没有任何异常的大脑
+然而，如果向这些人传播某种最坏的“情报”的话——
+他们的大脑就会变成能镇定地施行虐杀的恐怖群体
+……最坏的“情报”？
+——[这是我们的使命。我们是正义的。所以，不遵从使命的人都是邪恶的]
+这样的“情报”
+究竟，想说什么……？
+这些为所谓人类大脑这种脆弱群体准备的“情报”，不交给能够好好控制的人来管理是不行的
+这就是“STRATEGIC?FOCUS”的最终目的
+我为此也是深有同感，作为脑科学家，以特务的身份和他们协作
+明白了吗？
+……不明白
+这不过是电影里反派常用的狡辩罢了……
+到头来，你不还是用钱来买卖情报而已吗……！
+你刚说过我是“情报”的宝库吧……
+究竟想把时间机器的情报卖到哪个国家！？
+美国！？中国！？还是中东或非洲的纷争地区！？
+……是你所说的全部哟
+……！
+雷斯吉宁耸了耸肩，平静地笑道。
+跟核武器一样。我认为作为抑制力来说各个国家都需要
+……时间机器跟核武器有本质上的区别！
+没人会察觉它有没有被使用。更有可能世界会在使用者本人都不知情的状况下遭到改变！
+无法成为抑制力
+任何国家，肯定都会在无法察觉是谁改动了世界线的情况下，发疯般的不断改变世界！永远持续下去！
+正是这样！
+时间机器比核武器更加精密纤细
+正因如此你的——你们的能力是必要的
+记得你确实是称呼它为“Reading·Steiner”吧
+看样子和新性脑炎差不多是同一症状
+……！
+对了，雷斯吉宁正在进行关于新型脑炎的研究。
+我们正在调查新型脑炎患者或许能察觉过去的改变这一说法
+我们一直在追寻确凿的证据
+全世界的谍报机关同样也很积极地调查
+啊……！
+事情发展到这种地步，对于完全没有想到这种可能性的自己悔恨地咬牙切齿。
+由新型脑炎聚集起来的患者，明明没有生病，但是要接受无意义的治疗——我之前是这么想的。
+然而这种想法太天真。太过幼稚了。
+雷斯吉宁他们的目的只是把“Reading Steiner拥有者”聚集起来，从而进行他们的研究……！
+刚才从Maho那详细的听取了你那异于常人的能力
+本来，只是想从你那获取Kurisu那边遗失的成果
+没想到连新型脑炎的情报都……！你实在是太棒了！
+至此我们就领先了世界一步
+咕……
+话说……你为什么不早点跟我说那个能力的事情呢？
+如果这么做的话，你的朋友——Katsumi也不会受到各种各样的摧残了
+什……！
+Katsumi，中濑克美——吹雪的事吗！
+同时，如果你这么做的话，也不会对Maho的大脑实施手术了
+连比屋定都……！？
+之前样子奇怪是这个原因吗！？
+那是你的助手啊！明明那么尊重和仰慕你！
+这种，人体实验一样的东西，你竟敢！
+这是为了今后获得为人类做贡献的信息所需的必要事项
+而且，不用那么慌张
+Maho和Katsumi将来应该只是会稍微有一点点脑功能障碍
+你，你这家伙……已经疯了！
+我此刻第一次对眼前的男人感到厌恶——同时也感到了恐怖。
+没想到他和之前自己无比尊敬的人竟然是同一个人。
+调查“Reading·Steiner拥有者”的话，应该能有更多地发现
+然后把这个和时间机器一起卖出去的话，世界的军事平衡将会完全的保持住。同时也能避免战争
+希望你也协助我们
+雷斯吉宁一边说着如此恐怖的事情，然而脸上还是一副和平常相同的样子
+用着真帆数落他时所说的“顽皮的孩子”的那种天真，实际上却很开心地说着那些疯狂的话
+你骗了我！
+你之所以对我亲近，只是因为我和红莉栖关系亲密，想从我这套出红莉栖生前的情报吧！
+并不是想欺骗你
+最初和你相遇的确是偶然
+拜托你为Amadeus的测试员一大部分原因也是因为你是Kurisu的朋友
+只是在知道你的事情之后，真的仅仅只是对你产生了兴趣
+现在我仍然在想。如果你能在我这边做研究员的话我会很开心的
+但是——“那个”跟“这个”是两码事
+刚才不是已经说了吗？你现在是能跟合众国总统相匹敌的重要人物
+比起我个人的想法，我们的工作才是第一位的
+为了人类和平的未来
+很遗憾，Rintaro。同时也很期待
+为了尽早知道你所拥有的“情报”全貌，我已经蠢蠢欲动了
+坠入……地狱吧……！
+现在开始将提取你的记忆数据
+把你的记忆作为Amadeus系统来使用。难道不是一个好点子吗？
+如此一来，就算你由于事故死亡了，你的记忆也会留下来
+……呜
+啊，别紧张。本来就没有要杀掉你的打算
+跟Amadeus比起来，人类自身的安保措施太过简单
+只要稍微尝点苦头，就会为了能逃出去，很轻易地把情报泄露出去
+所谓隐藏秘密的安保措施等同于无
+相较于拷问不奏效的Amadues，还是以肉身的你作为对象来说更轻松。
+提取你的记忆数据，可以说是一个保险
+就算你没有忍受住拷问，进而出现了精神崩坏——
+只要在不久的将来把记忆数据载入你的脑内，你就能从崩坏中回复过来
+你也参加过我的演讲，应该知道的吧？
+……呜
+先取得记忆数据
+然后从你那边得到各种各样的情报。要变得忙起来了呢
+来，放松下来
+不然没法正常取得数据
+雷斯吉宁……！你这家伙……！
+就算你摆出这张脸，谁也不会来救你的
+因为这是我们STRATFO管理着的场所
+除了我们之外没有人知道
+没有人……
+……呜
+我惊慌失措起来。
+没有地方逃跑。
+想了想接下来会发生在自己身上的事情，由于恐惧腿不由得颤抖了起来。
+比起这种事，直接死掉可能会更加轻松一点……
+同时我因为自己确定未来自己到2025年没死的这件事之后，心情变得阴暗了起来。
+如果说受到无尽的拷问还没死的话。
+那身处的地方就真的如同字面意思一样，是地狱了……
 
 
 <br/>
@@ -8,4 +219,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0036) | [home](../../) | [next→](./0038) |
+| [←prev](./0044) | [home](../../) | [next→](./0046) |
