--- a/steins_gate_0/docs/0044.md
+++ b/steins_gate_0/docs/0044.md
@@ -1,6 +1,241 @@
-> <big> ** 私秘境里的圣痕 - 01** </big>  
+> <big> **私秘境里的圣痕 - 08** </big>  
 > 1.129954  
-> [ 间章 2011/06/03 ] 真帆偷听雷耶斯和雷斯吉宁密谈被抓。
+> [ 2011/07/06 ] 冈伦告知真帆（洗脑）真相，所有情报泄露。  
+
+位于和光市的【脑科学综合研究机构·日本办公室准备室】与半年前相比没有任何变化。
+还是一样大得离谱，空空荡荡的，摆放着许多没有人使用的办公桌
+桌面上的灰尘的量…大概增加了
+半年前，雷斯吉宁教授他们从这里搬走之后，这里变成了没有其他人使用的空房间了吧
+特地把你叫过来真是抱歉，Rintaro
+啊，没什么
+为了登录『Amadeus』而需要将App更新为最新版本，因此我大学上课结束后像这样赶到了这个办公室
+现在，真帆正为了更新而将我的智能手机连上数据线、用PC操作着
+差不多10分钟就能完成更新了，于是就发着呆等着
+话说，伦太郎
+我想以前提到过，要不要认真地考虑下留学的事？
+哎！？
+你觉得没问题的话，我也可以写个推荐信
+当然，也需要通过测试和面试
+我慌张地摆正姿势
+那个，真的是非常感谢…
+…但是我想以我现在的学习水平还有些困难
+我，真心以维克多·孔多利亚大学为目标，所以，绝对不想失败
+因此，我认为至少还必须要一年来认真地学习…
+雷斯吉宁教授微微地撅起嘴唇听着我语无伦次的说明
+但是，终于——
+OK,OK
+啪啪啪地拍着我的肩膀，露出了微笑
+你果然是个非常深思熟虑的青年啊
+是，是么？我还是第一次被这么说呢
+嘴上说说简单
+其实，只是胆小也说不定
+不畏惧挫败而踏出一步的勇气，有的时候也是必要的
+现在的我…怎么说呢
+那么，挑战留到明年么？
+是的吧…
+机会…就这样错过么
+雷斯吉宁教授能等得到明年吗？
+脑中荡起了不安
+太过钻牛角尖也不好哦，比如说去大学参观一下也好，有助于提升（up）行动力（motivation）
+参观，吗？
+如果时机合适的话，我们会出旅费，一起去看看吗？
+能为我考虑这么多…非常感谢！
+当然，我下一次什么时候会回美国，具体的时间还无法确定，HAHAHA
+是的
+低下头，打从心底里表示出了感谢
+能与这个人相遇，对我来说真是幸运
+……
+一瞬间，与真帆对上了视线
+不知为何，真帆带着些许悲伤的表情微笑着，然后马上错开了目光返回了工作
+真帆逗留的旅店是在离和光市相距数站电车距离地方的商务酒店
+果然还是避开了与半年前相同的酒店
+虽然有点不方便
+话说，稍微整理下怎么样
+来日本还没有经过多少天呢，居然散乱成这种程度…
+整理？我只是以让自己生活最有效率的位置摆放而已
+这么说来，也拒绝了酒店客房服务的床铺整理等的打扫工作吧…
+前辈就是这样不够细心，才无论到什么时候都找不到男朋友哦
+从我的智能手机传来了“红莉栖”无奈的声音
+APP升级结束后，一直开着『Amadeus』没关
+啊，多管闲事
+就这房间的惨状还邀请别人光临，一般都会羞耻得做不出来
+呜……
+不过，我也不擅长整理，就别针对这方面了
+那么，和我有话要说？
+来到这个酒店是因为真帆说“有话要说”
+虽然我觉得在办公室说也挺好的，但是真帆不管怎么样都主张要到酒店房间两个人单独地谈
+完全没有什么用心不轨，真帆不是那样的人，相处了将近半年，这一点我是明白的
+……
+真帆有点不好意思开口
+还没有听你说过
+关于红莉栖事件的真相
+…！
+我马上关掉了『Amadeus』的App
+另外…也想问下关于时间机器的事
+时间机器？
+红莉栖与中钵论文有关联，这么说的是你哦
+那孩子…真的把时间机器…？
+……
+我该怎样回答呢？
+半年前，真帆想要破解红莉栖的笔记本电脑
+为了阻止她，依情况而定，我也考虑过把经历过的事说出来
+结果，因为各种情况，错失了那个机会
+但是现在不同
+红莉栖的笔记本电脑已经不存在了
+现在不应该回首过去
+但是，真帆口中说出了意外的事
+其实，我这半年来，与我原本的研究并列进行着时间机器的研究
+…什么？
+如果红莉栖做到了，那么我也…这么认为的
+扭曲的对抗意识吧…说不定成了赌气
+但是，但是
+如果时间机器能够做出来的话…就有可能拯救红莉栖了——
+住手！
+……！
+最坏的情况…
+现在还折返回去？
+不止如此，真帆和我一样对红莉栖的事纠结着
+不要想傻事
+…冈部先生？
+不要想着 拯救牧濑红莉栖什么的
+那样的可能性是0
+“神的定理”不允许那样
+果然
+你，果然知道些什么吧
+真帆追问过来
+难道说…实现了？红莉栖把时间机器完成了？
+你已经乘坐那个进行了人类首次的时间旅行了吧？一定是那样的！
+…是有根据，才这么说的吗？
+…！
+装作冷静的样子反驳之后，真帆一副对自己说出的话惊讶的样子低下了头
+……对不起
+我，有哪里不对。居然说出了这样的幻想…
+……呜
+比屋定小姐？
+从真帆的眼中滴下了眼泪
+突然在我眼前哭了起来，让我不知所措
+我到底是怎么回事…这样突然的就…
+完全没想哭的…
+真帆困惑般地用手指拭去自己眼睛里溢出的泪水
+从我看来，她情绪相当不安定
+与其说，比以前更加凸显出脆弱…
+不如说是精神上被逼的走投无路的感觉
+半年前被卷入各种事件也有影响的吧
+视频聊天的时候，完全看不到这样的表现
+该说出来吗？
+在进行时间机器的研究，是个不好的征兆
+到时候，她自己开始这样那样的调查，一不小心踩到地雷的可能性也有
+那么，就说出我选择放弃的原由，让真帆也就此收手
+…我知道了，就让我告诉你我经历过的事吧
+绝对，不要和任何人说
+另外，关于这个再强调一次
+不要去想拯救牧濑红莉栖
+行么？
+真帆擦着眼泪，点了下头
+我说了——
+α世界线经历的事、时间机器的事、Reading Steiner的事
+还有，经历过被称为时间跳跃的，只是让记忆穿越过去的事。还有红莉栖开发了时间跳跃机的事
+自称约翰·提托，来自2036年的时间旅行者阿万音铃羽的事
+铃羽说到的未来，会第三次世界大战的事
+并且那场战争是以时间机器的开发竞争为导火索而发生
+淡淡地诉说着这些发生的事
+红莉栖死的时候的情况…果然还是说不出口
+听完所有事的真帆，暂时默默地陷入了沉思
+哎——
+最终叹了大大的一口气，一副苦涩的表情用手指揉着太阳穴的位置
+头，好痛…
+没必要全部相信
+认为我脑子有问题也没关系
+但是，如果你想继续研究时间机器并想着拯救红莉栖的话，我不管使用什么手段也会阻止你的
+所以，不要再去想奇怪的事
+不要自己逼自己
+真帆抬起手制止了我继续说下去
+让我稍微整理下
+你说的Reading Steiner不是指新型脑炎么？
+和雷斯吉宁教授说的症状一样…
+…是…的，或许是那样的
+该不该对对雷斯吉宁教授说，我还在犹豫
+说不定会导致无谓的混乱…
+你怎么认为？
+…别问我
+真帆又用指尖揉着太阳穴
+是啊，抱歉
+你真的破坏了红莉栖的笔记本电脑吗？
+是的，破坏掉了
+里面呢？看过了吗？
+不知道密码的破解方法，想看也看不了
+听说桶子也举手投降了
+那么，我怎么可能破解得了
+你读过红莉栖写的关于时间机器的原版论文吗？
+没
+真帆把疑问一个接一个地抛了过来
+不知为何，急躁得有些奇怪的样子
+你知道红莉栖是如何完成时间跳跃机器的吗？
+大致上吧
+能重现出来吗？
+不好说，如果有桶子的帮助的话，或许…
+能做出来吧？
+我一个人的话很困难
+我呢？
+不要想那种事
+……
+于是，真帆意外地露出了痛苦的表情
+仔细看发现，她脸色非常不好
+比屋定小姐，没事吧？
+难道说，真的头在发痛么？
+稍微躺一下吧
+但是对于那个提议，真帆左右摇头，然后继续提问了起来
+时间机器现在在哪里？
+就是铃羽乘坐来的那个，现在在哪里？
+……
+在哪？
+对于那个没有铃羽的许可该不该说出来稍微有些犹豫
+…秋叶原
+被真帆像要看穿我的眼神直视着，结果，我回答了出来
+在广播馆的楼顶，现在也在那里
+是么…
+不知为何真帆失望地放下了肩膀嘟囔道
+虽然对于说不定会说出“让我直接看看”做好了心理准备…
+果然身体不太好的样子
+真的没事吗？
+我手搭在真帆的肩上，想要看下她的脸色
+今天还是休息比较好——
+——
+突然的
+被真帆柔弱地身体撞了下
+因为那突然的气势，我被逼到了墙壁
+干，干什么——
+在混乱之中，喉咙被手臂压在墙上
+真帆用手臂的骨头压迫住我的气管
+呃……！
+无法呼吸，也无法出声
+不明所以地扭动着身体想要抵抗
+于是真帆用另一只手猛地抓住我的头，想要将我的后脑部撞向墙壁
+非常大的力气
+体格上明显是我比较有利，但是却无法从禁锢中逃离
+真可惜，冈部先生…
+真帆的那个声音，非常的低沉，非常的冰冷
+这么想着，但是马上发出了难受的呜咽声，露出了痛苦的表情
+额…
+头…要裂开了一样…
+从那眼中又滴下了眼泪
+为什么…
+为什么要…告诉我…
+你…应该…闭口不谈…的！
+无法逃开……。
+虽然扯着真帆的长发想借此挣脱开，但她完全没有松手。就像感觉不到疼痛一样。
+竭尽全力从口袋里取出了从刚才开是就不断振动着的智能手机。
+手在无法看见显示屏的状态下，在屏幕上点击着。
+——快回应我, “红莉栖”
+冈部——！？
+“红莉栖”……
+意识逐渐模糊。
+就要死在这里了吗。
+在不知道为何真帆会对自己下杀手的情况下。
+只是……
+掐着我脖子的真帆脸上一直挂着痛苦的表情。
+又在流泪了。
+就这样，不知道这泪水是出于真心还是演技，我就失去了意识……
 
 
 <br/>
@@ -8,4 +243,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0036) | [home](../../) | [next→](./0038) |
+| [←prev](./0043) | [home](../../) | [next→](./0045) |
